--- a/assets/package.json
+++ b/assets/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "stylelint": "^13.0.0",
     "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-scss": "^3.14.2"
   }
 }
