--- a/theme.toml
+++ b/theme.toml
@@ -1,21 +1,12 @@
-# theme.toml template for a Hugo theme
-# See https://github.com/gohugoio/hugoThemes#themetoml for an example
-
 name = "Origin"
 license = "MIT"
 licenselink = ""
-description = ""
+description = "simple theme for hugo"
 homepage = "http://example.com/"
-tags = []
+tags = ["blog", "responsive", "light", "simple"]
 features = []
 min_version = "0.41"
 
 [author]
-  name = ""
+  name = "Andrey Parfenov"
   homepage = ""
-
-# If porting an existing theme
-[original]
-  name = ""
-  homepage = ""
-  repo = ""
