add preview images README, remove photos, redundant style package.json

--- a/theme.toml
+++ b/theme.toml
@@ -2,7 +2,7 @@ name = "Origin"
 license = "MIT"
 licenselink = "https://gitlab.com/asleeppiano/origin-hugo-theme/-/blob/master/LICENSE"
 description = "simple theme for hugo"
-homepage = ""
+homepage = "https://asleeppiano.gitlab.io/origin-hugo-site/"
 tags = ["blog", "responsive", "light", "simple"]
 features = []
 min_version = "0.60"
