footer visible if copyright isset or socials are set

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -8,22 +8,23 @@ DefaultContentLanguage = "en"
 enableInlineShortcodes = true
 footnoteReturnLinkContents = "^"
 theme = "origin"
-favicon = ""
 
 [params]
   description = "simple hugo theme"
   featured = true
   cssonly = false
-  facebook = ""
-  twitter = ""
-  instagram = ""
-  youtube = ""
-  github = ""
-  gitlab = ""
-  linkedin = ""
-  mastodon = ""
-  slack = ""
-  stackoverflow = ""
+
+  [params.socials]
+    facebook = ""
+    twitter = ""
+    instagram = ""
+    youtube = ""
+    github = ""
+    gitlab = ""
+    linkedin = ""
+    slack = ""
+    stackoverflow = ""
+    medium= ""
 
 [menu]
 
